--- a/css/main.css
+++ b/css/main.css
@@ -19,17 +19,52 @@ body {
 
 .robot {
   width: 320px;
+  position: relative;
+  top: 2rem;
+  right: 2rem;
 }
 
 .robot-body {
   width: 320px;
+  bottom: 0;
+  display: block;
 }
 
 .robot-brain {
   width: 46px;
+  position: absolute;
 }
 
 .robot-head-right,
 .robot-head-left {
   width: 125px;
+}
+
+.robot-head-right {
+  position: absolute;
+  top: -3rem;
+  right: 2.3rem;
+}
+
+.robot-head-left {
+  position: absolute;
+  top: -3rem;
+  left: 2.3rem;
+}
+
+.robot:hover .robot-brain {
+  position: absolute;
+  left: 8.5rem;
+  top: -3rem;
+}
+
+.robot:hover .robot-head-left {
+  top: -3.5rem;
+  left: -2.3rem;
+}
+
+.robot:hover .robot-head-right {
+  position: absolute;
+  top: -3.5rem;
+  right: -2.3rem;
 }
