--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-
   font: normal 100%/1.5 sans-serif;
 }
 
@@ -15,11 +14,14 @@ body {
 
 .banner {
   background-color: #2b3851;
+  padding: 2rem;
+  overflow: hidden;
 }
 
 .robot {
   width: 320px;
   position: relative;
+  margin: 0 auto;
   top: 2rem;
   right: 2rem;
 }
